tf_modules/modules/slacko-app/main.tf
data "aws_ami" "slacko-app" {
    most_recent = true
    owners = ["amazon"]
 
    filter {
        name = "name"
        values = ["Amazon*"]
    }

    filter {
        name = "architecture"
        values = ["x86_64"]
    }

}

data "aws_subnet" "subnet_public" {
   cidr_block = var.subnet_cidr
}

# Gerando a chave
# ssh-keygen -C slacko -f slacko
resource "aws_key_pair" "slacko-sshkey" {
    key_name = "slacko-app-key"
    public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCvpklLaLLdvz/N6aZoqQfXrhmD4Q0TU02FQ8wOVF1Nacf3+m8PL8O87JJeUIDH5LoLsurBMvsro2SgQtqsGKEyYEDHRpO0fU+lAJSVA/K3KSq8F81c2DpTmUM7ODpYKdBEY1c+tO04LYcGzAxxQ9bZJNBsG4SvFB3+zuTGx8JNRBT8rYnCnpFXshcdm0o2pX/tshcHqXwhZhY5NoitHnOl7m0KALb/y/Sbhgw5vBLSHRCO7tMKVWie95cHm1Zopv9OD/9ChUcp4JS7F7F7l0xqggVLd78K9PlRZDv/p0SkQsdMl0Zp/OVApVO+WuJEi6rBq8fjaNZ4H4bmBjiCwnR6ts4EntwgWn9LcxXbVRpjDPMHrsfWWvGBATjx8JeoVC/7mdq5AHckLfJe9BbMbY3qixDvO6u1E4SsozQD3li9Ury90fPsK0VTHKD3Qk [...]

}

resource "aws_instance" "slacko-app" {
    ami = data.aws_ami.slacko-app.id
    instance_type = "t2.micro"
    subnet_id = data.aws_subnet.subnet_public.id
    associate_public_ip_address = true

	tags = merge(var.app_tags,
	{
	"Name" = format("%s-app", var.app_name)
	},)

    key_name = aws_key_pair.slacko-sshkey.id

    # arquivo de bootstrap  
    user_data = file("${path.module}/files/ec2.sh")
}

resource "aws_instance" "mongodb" {
    ami = data.aws_ami.slacko-app.id
    instance_type = "t2.micro"
    subnet_id = data.aws_subnet.subnet_public.id

	tags = merge(var.app_tags,
        {
        "Name" = format("%s-app", var.app_name)
        },)

    key_name = aws_key_pair.slacko-sshkey.id
    user_data = file("${path.module}/files/mongodb.sh")
}

resource "aws_security_group" "allow-slacko" {
    name = "allow_ssh_http"
    description = "Allow ssh and http port"
    vpc_id = var.vpc_id

       tags = merge(var.app_tags,
        {
        "Name" = format("%s-app", var.app_name)
        },)

    ingress =[
    {
        description = "Allow SSH"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        ipv6_cidr_blocks = []
        self = null
        prefix_list_ids = [] 
        security_groups = []
    },
    {
        description = "Allow Http"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        ipv6_cidr_blocks = []
        self = null
        prefix_list_ids = [] 
        security_groups = []
    }
]

    egress = [
    {
        description = "Allow all"
        from_port = 0
        to_port = 0
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        ipv6_cidr_blocks = []
        self = null
        prefix_list_ids = [] 
        security_groups = []
    }
]

    
}

resource "aws_security_group" "allow-mongodb" {
    name = "allow_mongodb"
    description = "Allow MongoDB"
    vpc_id = var.vpc_id
       tags = merge(var.app_tags,
        {
        "Name" = format("%s-app", var.app_name)
        },)



    ingress = [
    {
        description = "Allow MongoDB"
        from_port = 27017
        to_port = 27017
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        ipv6_cidr_blocks = []
        self = null
        prefix_list_ids = [] 
        security_groups = []
    }
]
    egress = [
    {
        description = "Allow all"
        from_port = 0
        to_port = 0
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        ipv6_cidr_blocks = []
        self = null
        prefix_list_ids = [] 
        security_groups = []
    }
]


}

resource "aws_network_interface_sg_attachment" "mongodb-sg" {
   security_group_id = aws_security_group.allow-mongodb.id
   network_interface_id = aws_instance.mongodb.primary_network_interface_id
}

resource "aws_network_interface_sg_attachment" "slacko-sg" {
   security_group_id = aws_security_group.allow-slacko.id
	network_interface_id = aws_instance.slacko-app.primary_network_interface_id
}

resource "aws_route53_zone" "slack_zone" {
  name = "iaac0506.com.br"
  vpc {
    vpc_id = var.vpc_id
  }
}

resource "aws_route53_record" "mongodb" {
    zone_id = aws_route53_zone.slack_zone.id
    name = "mongodb.iaac0506.com.br"
    type = "A"
    ttl = "300"
    records = [aws_instance.mongodb.private_ip]
}
